--- a/src/assets/components/home/home.css
+++ b/src/assets/components/home/home.css
@@ -13,7 +13,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 370px;
+    width: 100%;
     height: 280px;
     background-repeat: no-repeat;
     background-size: cover;
@@ -26,7 +26,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 370px;
+    width: 100%;
     height: 280px;
     background-repeat: no-repeat;
     background-size: cover;
@@ -39,7 +39,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 370px;
+    width: 100%;
     height: 280px;
     background-repeat: no-repeat;
     background-size: cover;
