--- a/src/assets/components/Home Section/home.css
+++ b/src/assets/components/Home Section/home.css
@@ -1,5 +1,5 @@
 #banner-bg {
-    background-image: url('/src/assets/images/slider_1.jpg');
+    background-image: url('/src/assets/images/Main_bannar.jpg');
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -18,6 +18,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
+    transition: 0.5s ease;
 }
 
 #banner-2 {
@@ -31,6 +32,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
+    transition: 0.5s ease;
 }
 
 #banner-3 {
@@ -44,6 +46,17 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
+    transition: 0.5s ease;
+}
+
+#banner-1:hover{
+    opacity: 80%;
+}
+#banner-2:hover{
+    opacity: 80%;
+}
+#banner-3:hover{
+    opacity: 80%;
 }
 
 .img-title {
