--- a/src/assets/components/Products Data Section/products.css
+++ b/src/assets/components/Products Data Section/products.css
@@ -1,6 +1,6 @@
 
 .card-body-hover {
-    transition: 0.5s ease;
+    transition: all 0.50s ease-in;
     padding: 0;
 }
 
@@ -9,6 +9,6 @@
     -webkit-box-shadow: 10px 11px 25px -15px rgba(0,0,0,0.5);
     -moz-box-shadow: 10px 11px 25px -15px rgba(0,0,0,0.5);
     cursor: pointer;
+    border: none;
 }
-
 
