card hover effect add

--- a/src/assets/components/Products Data Section/products.css
+++ b/src/assets/components/Products Data Section/products.css
@@ -1,6 +1,6 @@
 
 .card-main {
-    transition: all 0.50s ease-in;
+    border-radius: 10px;
     width: auto;
     min-height: 300px;
     overflow: hidden;
